# Pete_ollama_agent

./: .dockerignore  .dockerignore.uv  .env  .gitignore  .vercelignore  .whatsworking_state.json  DEPLOYMENT.md  DOCKER.md  DOCKER_HUB_SETUP.md  Dockerfile  Dockerfile.lightweight  Dockerfile.reliable  Dockerfile.serverless  Dockerfile.uv  Modelfile  PROJECT_SUMMARY.md  README.md  README_SERVERLESS.md  README_VIRTUAL_JAMIE.md  analyze_openrouter_detailed.py  analyze_openrouter_integration.py  analyze_openrouter_models.py  analyze_questions.py  api_server.py  architecture_analysis.md  build_serverless.sh  check_runpod_account.py  check_runpod_endpoint.py  cleanup_memory.sh  cli.py  comprehensive_system_test.py  create_test_suite.py  create_working_jamie_model.py  debug_webhook_server.py  dev_server.py  diagnose_endpoint.py  docker-build-reliable.sh  docker-build-uv.sh  docker-build.sh  docker-compose.lightweight.yml  (+68 more)
.cursor/: rulesOllamaModelfile.md
DEV-MAN/: MODELFILE_CREATION_PROCESS.md  UNIFIED_CONVERSATION_MANAGEMENT.md  VAPI_INTEGRATION_FIX_PLAN.md
DEV_MAN/: COMPREHENSIVE_PROJECT_STATUS_2025-08-19.md  COMPREHENSIVE_PROJECT_STATUS_CORRECTED_2025-08-19.md  CONFIGURATION_FLOW_ANALYSIS.md  CONFIGURATION_INTEGRATION_PLAN.md  FULL_SERVICE_APPLICATION_PLAN.md  INTEGRATION_FIX_PLAN.md  README.md  SERVERLESS_DEPLOYMENT_PLAN.md  end_to_end_verification_20250819_204806.json  plan.md  serverless_implementation_summary.md  serverless_status.json  test_results_20250819_202750.json  test_results_20250820_171138.json  whatsWorking.py  whats_working.md  whats_working_verification_20250819_205207.json  whats_working_verification_20250819_205305.json  whats_working_verification_20250819_205529.json  whats_working_verification_20250819_205605.json  whatsworking.md
DEV_MAN/PeteOllama(V1)/: COMPLETE_SYSTEM_STATUS_2025.md  CURRENT_STATUS_TRAINING_ROADMAP.md  DYNAMIC_MODEL_MANAGEMENT_SYSTEM.md  LANGCHAIN_INTEGRATION_STATUS.md  OLLAMA_MODELS_PERSISTENCE_STRATEGY.md  OPTIMIZATION_PLAN_IMMEDIATE.md  PYDANTIC_SELF_CORRECTING_SYSTEM.md  RUNPOD_STORAGE_ANALYSIS.md  plan.md  runpod2.md  whatsWorking.md
DEV_MAN/docs/: architecture_diagram.md  codebase_analysis.json
DEV_MAN/mcp_configs/: mcp_server_pis_docs.json  mcp_server_pis_goals.json  mcp_servers_all.json
DEV_MAN/pending/: ollamarulesplan.md
DEV_MAN/whatsworking/: END_USER_GUIDE_2025-08-19_v01_2025-08-19_20-31-50.md  END_USER_GUIDE_2025-08-19_v02_2025-08-19_20-39-15.md  END_USER_GUIDE_2025-08-19_v03_2025-08-19_20-55-18.md  WHATS_WORKING_2025-08-19_v01_2025-08-19_20-31-50.md  WHATS_WORKING_2025-08-19_v02_2025-08-19_20-39-15.md  WHATS_WORKING_2025-08-19_v03_2025-08-19_20-55-18.md  architecture_2025-08-19_v01.json  architecture_2025-08-19_v02.json  architecture_2025-08-19_v03.json  metadata_2025-08-19_v01.json  metadata_2025-08-19_v02.json  metadata_2025-08-19_v03.json  platform_report.json  system_health_report.json
_deprecated/: README.md  docker-compose.old.yml
api/: index.py
colab_notebooks/: README.md  README_DIRECT.md
config/: model_settings.json  system_config.json
models/: Modelfile.enhanced
src/: __init__.py  analyze_ollama_agent.py  full_whats_working_analysis.py  generate_visual_documentation.py  main.py  main_app.py  ollama_proxy.py  ollama_proxy_streaming.py  openrouter_handler.py  serverless_handler.py  startup_warmup.py  test_ui_route.py  virtual_jamie_extractor.py  webhook_only.py  whats_working_analyzer.py  whats_working_feature_tracker.py  whats_working_updater.py
src/DEV_MAN/: test_results_20250819_192045.json  test_results_20250819_192354.json  test_results_20250819_193503.json  test_results_20250819_195213.json  test_results_20250819_195747.json
src/ai/: model_manager.py  model_preloader.py  response_cache.py
src/analytics/: __init__.py  benchmark_analyzer.py  (+4 more)
tests/: comprehensive_system_test_suite.py  end_to_end_verification_test.py  test_direct_endpoint.py  test_endpoint_connectivity.py  test_full_conversations.py  test_jamie_manual.py  test_native_api.py  test_openrouter_chat.py  test_provider_api.py  test_runpod_ai_endpoints.py  test_runpod_ai_health.py  test_runpod_basic.py  test_runpod_handler.py  test_serverless_integration.py  test_system_config.py  test_updated_handler.py  test_working_models.py  whats_working_claims_verification.py
(+86 files in other folders)
