[project]
name = "peteollama"
version = "1.0.0"
description = "AI Property Manager trained on real phone conversations"
authors = [
    {name = "Pete", email = "pete@peteproperties.com"}
]
requires-python = ">=3.11"
dependencies = [
    # Core Application
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    # Database
    "psycopg2-binary>=2.9.9",
    # AI & ML
    "requests>=2.31.0",
    "ollama>=0.1.8",
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.6",
    # VAPI Integration
    "websockets>=11.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "nodemon>=0.1.1",
    "sqlalchemy>=2.0.42",
    "pandas>=2.3.1",
    "pyodbc>=5.2.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "duckduckgo-search>=8.1.1",
    "langchain-core>=0.3.72",
    "pendulum>=3.1.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
